qt/gen_qlocale.h

class QDate;
class QDateTime;
class QLocale;
class QTime;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QLocale QLocale;
typedef struct QTime QTime;
uint16_t QLocale_toUShort2(const QLocale* self, struct miqt_string s, bool* ok);
int QLocale_toInt2(const QLocale* self, struct miqt_string s, bool* ok);
unsigned int QLocale_toUInt2(const QLocale* self, struct miqt_string s, bool* ok);
long QLocale_toLong2(const QLocale* self, struct miqt_string s, bool* ok);
unsigned long QLocale_toULong2(const QLocale* self, struct miqt_string s, bool* ok);
long long QLocale_toLongLong2(const QLocale* self, struct miqt_string s, bool* ok);
unsigned long long QLocale_toULongLong2(const QLocale* self, struct miqt_string s, bool* ok);
float QLocale_toFloat2(const QLocale* self, struct miqt_string s, bool* ok);
double QLocale_toDouble2(const QLocale* self, struct miqt_string s, bool* ok);
struct miqt_string QLocale_toString22(const QLocale* self, double i, char f);
struct miqt_string QLocale_toString32(const QLocale* self, double i, char f, int prec);
struct miqt_string QLocale_toString23(const QLocale* self, float i, char f);
struct miqt_string QLocale_toString33(const QLocale* self, float i, char f, int prec);
struct miqt_string QLocale_toString24(const QLocale* self, QDate* date, int format);
struct miqt_string QLocale_toString25(const QLocale* self, QTime* time, int format);
struct miqt_string QLocale_toString26(const QLocale* self, QDateTime* dateTime, int format);
struct miqt_string QLocale_dateFormat1(const QLocale* self, int format);
struct miqt_string QLocale_timeFormat1(const QLocale* self, int format);
struct miqt_string QLocale_dateTimeFormat1(const QLocale* self, int format);
QDate* QLocale_toDate22(const QLocale* self, struct miqt_string string, int param2);
QTime* QLocale_toTime22(const QLocale* self, struct miqt_string string, int param2);
QDateTime* QLocale_toDateTime22(const QLocale* self, struct miqt_string string, int format);
struct miqt_string QLocale_monthName2(const QLocale* self, int param1, int format);
struct miqt_string QLocale_standaloneMonthName2(const QLocale* self, int param1, int format);
struct miqt_string QLocale_dayName2(const QLocale* self, int param1, int format);
struct miqt_string QLocale_standaloneDayName2(const QLocale* self, int param1, int format);
struct miqt_string QLocale_currencySymbol1(const QLocale* self, int param1);
struct miqt_string QLocale_toCurrencyString22(const QLocale* self, long long param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString23(const QLocale* self, unsigned long long param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString24(const QLocale* self, int16_t param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString25(const QLocale* self, uint16_t param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString26(const QLocale* self, int param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString27(const QLocale* self, unsigned int param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString28(const QLocale* self, double param1, struct miqt_string symbol);
struct miqt_string QLocale_toCurrencyString29(const QLocale* self, float i, struct miqt_string symbol);
struct miqt_string QLocale_formattedDataSize2(QLocale* self, long long bytes, int precision);
struct miqt_string QLocale_formattedDataSize3(QLocale* self, long long bytes, int precision, int format);
struct miqt_string QLocale_formattedDataSize22(const QLocale* self, long long bytes, int precision);
struct miqt_string QLocale_formattedDataSize32(const QLocale* self, long long bytes, int precision, int format);
struct miqt_string QLocale_quoteString2(const QLocale* self, struct miqt_string str, int style);
void QLocale_delete(QLocale* self);